methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:2: error: not found: value avnace
  avnace()
  ^