methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  avnace()
  for (i<-1 to 7)
  {
    avance()
  }
  gauche()
    for (i<-1 to 7)
  {
    avance()
  }
  droite()
}

